27.08.16 - Rewriting up to AnalyserGen; cross-map errors